Minor design fixes
Several minor design fixes, including:
- Adding the force-wrap class to long-form URLs in the about page (this
  was causing layout problems on mobile), as well as to similar sections
  in the cite partial and revision history
- Adding a dark grey inset for the downloads section in sidebar, and
  moving the "full catalogue citation" link inside the expander

--- a/source/assets/stylesheets/_nav_contents.scss
+++ b/source/assets/stylesheets/_nav_contents.scss
@@ -107,7 +107,8 @@ $sliding-panel-fade-screen-bg: #000;
   }
 }
 
-.nav-cite {
+.nav-cite,
+.nav-downloads {
   background-color: $dark-gray;
   font-size: 0.85em;
   padding: $small-spacing;
